Fix termal commands formatting

--- a/docs/guides/posthog-session-analysis.mdx
+++ b/docs/guides/posthog-session-analysis.mdx
@@ -34,8 +34,13 @@ Before starting, ensure you have:
     ```bash npm i -g @continuedev/cli ```
   </Step>
   <Step title="Install & Setup GitHub CLI">
-    ```bash # macOS brew install gh # Ubuntu/Debian sudo apt install gh #
-    Windows winget install --id GitHub.cli 
+    ```bash 
+    # macOS 
+    brew install gh
+    # Ubuntu/Debian
+    sudo apt install gh
+    # Windows
+    winget install --id GitHub.cli
     ```
 
       Then authenticate: `gh auth login`
