Change card text

--- a/docs/guides/posthog-session-analysis.mdx
+++ b/docs/guides/posthog-session-analysis.mdx
@@ -538,12 +538,9 @@ After completing this guide, you have a complete **Continuous AI system** that:
 Ready to enhance your workflow? Consider these additions:
 
 <CardGroup cols={2}>
-  <Card
-    title="MCP Integration"
-    icon="plug"
-    href="/guides/posthog-session-analysis#enhanced-workflow-with-mcp-tools"
-  >
-    Add PostHog and GitHub MCP servers for more sophisticated analysis
+  <Card title="Want More Advanced Features?" icon="star">
+    For greater flexibility, consider enhancing this workflow with additional
+    PostHog data sources (funnel analysis, feature flags, etc.)
   </Card>
   <Card title="Custom Analysis Rules" icon="rules">
     Train the AI on your specific codebase patterns and conventions
