Clean up language and unnecessary text

--- a/docs/guides/posthog-session-analysis.mdx
+++ b/docs/guides/posthog-session-analysis.mdx
@@ -535,14 +535,14 @@ After completing this guide, you have a complete **Continuous AI system** that:
 
 </Warning>
 
-## Advanced Extensions
+## Continue Your Workflow
 
-Ready to enhance your workflow? Consider these additions:
+Consider these additions:
 
 <CardGroup cols={2}>
-  <Card title="Want More Advanced Features?" icon="star">
-    For greater flexibility, consider enhancing this workflow with additional
-    PostHog data sources (funnel analysis, feature flags, etc.)
+  <Card title="Advanced Features?" icon="star">
+    Enhance this workflow with additional PostHog data sources (funnel analysis,
+    feature flags, etc.)
   </Card>
   <Card title="Custom Analysis Rules" icon="rules">
     Train the AI on your specific codebase patterns and conventions
@@ -561,9 +561,3 @@ Ready to enhance your workflow? Consider these additions:
 2. **Measure impact** - Track how resolved issues improve PostHog metrics
 3. **Refine analysis** - Adjust the Continue CLI prompts based on issue quality
 4. **Scale the system** - Add more data sources or create specialized analysis workflows
-
-<Card title="Want More Advanced Features?" icon="star">
-  Check out the [Enhanced MCP
-  Integration](/guides/posthog-session-analysis#enhanced-workflow-with-mcp-tools)
-  section for direct PostHog and GitHub API access through structured tools.
-</Card>
