Fix title and description

--- a/docs/guides/posthog-github-continuous-ai.mdx
+++ b/docs/guides/posthog-github-continuous-ai.mdx
@@ -1,11 +1,8 @@
 ---
-title: "PostHog Session Recording Analysis with Continue CLI"
-description: "Automatically analyze PostHog session recordings to identify UX issues and generate code optimization suggestions using Continue CLI"
+title: "Building a Continuous AI Workflow with PostHog and GitHub"
+description: "This guide shows you how to build an automated system that continuously monitors PostHog session recordings, analyzes user experience issues using AI, and automatically creates GitHub issues for your development team to address."
+sidebarTitle: "PostHog Session Analysis with Continue CLI"
 ---
-
-# Building a Continuous AI Workflow with PostHog and GitHub
-
-This guide shows you how to build an automated system that continuously monitors PostHog session recordings, analyzes user experience issues using AI, and automatically creates GitHub issues for your development team to address.
 
 <Card title="What You'll Build" icon="robot">
   A fully automated workflow that fetches PostHog session data, uses Continue
