Remove repetitive warning

--- a/docs/guides/posthog-github-continuous-ai.mdx
+++ b/docs/guides/posthog-github-continuous-ai.mdx
@@ -12,17 +12,10 @@ sidebarTitle: "PostHog Session Analysis with Continue CLI"
 
 ## Prerequisites
 
-<Warning>
-  **Session Recordings Required**: This workflow requires PostHog session
-  recordings to be enabled. If you haven't set this up yet, follow [PostHog's
-  session recording installation
-  guide](https://posthog.com/docs/session-replay/installation) first.
-</Warning>
-
 Before starting, ensure you have:
 
 - GitHub repository where you want to create issues
-- PostHog account with **session recordings enabled and collecting data**
+- PostHog account with **[session recordings enabled and collecting data](https://posthog.com/docs/session-replay/installation)**
 - Node.js 18+ installed locally
 - Basic familiarity with [Continue CLI](/guides/cli)
 
