Add note about labeling conventions

--- a/docs/guides/posthog-github-continuous-ai.mdx
+++ b/docs/guides/posthog-github-continuous-ai.mdx
@@ -343,6 +343,9 @@ chmod +x create-github-issues.sh
   `user-experience`
    - **Low Priority** → `low-priority`, `user-experience`
 
+**Be sure to customize the label logic** in the script to match your
+repository's labeling conventions!
+
 </Tip>
 
 ## Step 4: Complete Automated Workflow
